snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/maven-metadata.xml.sha1
0bd38cde16cba9169498a3d202ae6800bbd50a36